testData/fixtures/pitfalls/suspiciousBinaryOperations/suspicious-binary-operations.array-concatenation.php
<?php

return [
    '...' <error descr="[EA] Operation on an array doesn't make much sense here.">.</error> [],
    [] <error descr="[EA] Operation on an array doesn't make much sense here.">.</error> '...',
];